--- a/index.html
+++ b/index.html
@@ -190,18 +190,17 @@
                                                                     <div id="popup2" class="popup-overlay" onclick="fecharPopup('popup2')" aria-hidden="true">
                                                                         <div class="popup-content" onclick="event.stopPropagation()">
                                                                             <p><strong>Cenário:</strong>
-                                                                                A flexibilidade permite lidar com imprevistos e mudanças no cotidiano, como ajustar as prioridades ou encontrar novas soluções para problemas inesperados.
+                                                                                A flexibilidade é essencial para o bem-estar emocional e o desenvolvimento pessoal, ajudando a superar desafios diários e a evitar frustrações diante de mudanças inesperadas.
                                                                             </p>
                                                                             <p><strong>Instruções:</strong>
-                                                                                Com base no texto, analise como a flexibilidade pode auxiliar na resolução de desafios diários. 
-                                                                                Utilize exemplos práticos para fundamentar sua resposta.
+                                                                                Utilizando os conceitos apresentados no texto, analise a importância da flexibilidade para o desenvolvimento pessoal. Considere aspectos como resiliência, adaptação e a capacidade de equilibrar valores individuais com as demandas do ambiente.
                                                                             </p>
                                                                             <p><strong>Pergunta:</strong>
-                                                                                Como a flexibilidade contribui para a adaptação a imprevistos no dia a dia e para a busca de soluções eficazes?
+                                                                                De que forma a flexibilidade contribui para o crescimento pessoal e o bem-estar emocional das pessoas?
                                                                             </p>
                                                                             <textarea id="input-text2" oninput="checkInput('input-text2', 'btn-container2')" placeholder="Digite algo..."></textarea> 
                                                                             <div class="btn-container justify-content-center align-items-center" id="btn-container2" style="visibility: hidden;">
-                                                                                <button class="btn btn-primary" id="BtnEnvio" onclick="enviarTexto('input-text2', 'popup2', 'Obrigado pela resposta sobre imprevistos!')">Feedback</button>
+                                                                                <button class="btn btn-primary" id="BtnEnvio" onclick="enviarTexto('input-text2', 'popup2', 'A flexibilidade é essencial para o equilíbrio emocional, pois permite que as pessoas enfrentem mudanças sem sofrer impactos negativos excessivos. Segundo o texto, esta habilidade está associada à resiliência e ao otimismo, que ajudam na superação de adversidades. Ao aprender a ajustar comportamentos e pensamentos sem renunciar a valores essenciais, os indivíduos conseguem lidar melhor com desafios e evitar padrões rígidos de pensamento, o que fortalece tanto o desenvolvimento pessoal quanto relações interpessoais.')">Feedback</button>
                                                                             </div>
                                                                         </div>
                                                                     </div>
