--- a/index.html
+++ b/index.html
@@ -334,18 +334,19 @@
                                                             <span style="color: var(--bs-white); font-size: 1.1rem;">
                                                                 <p>1) Qual prática, baseada no manejo de pressão e estresse, seria mais eficiente em um cenário em que se lida com prazos apertados e mudanças frequentes?  </p>
                                                                 <div style="gap: 0.9rem;" class="d-flex flex-column w-100">
-                                                                    <label style="gap: 0.5rem;" class="d-flex align-items-center justify-content-center">
-                                                                        <input type="checkbox" name="" id=""> <br> a) Negligenciar as mudanças apresentadas para focar apenas na ideia e planejamento inicial.
+                                                                    <label class="d-flex align-items-center gap-2">
+                                                                        <input type="checkbox" class="option" value="false"> a) Negligenciar as mudanças apresentadas para focar apenas na ideia e planejamento inicial.
                                                                     </label>
-                                                                    <label>
-                                                                        <input type="checkbox" name="" id=""> b) Adotar técnicas de priorização e delegar tarefas a outros envolvidos, de forma organizada.
+                                                                    <label class="d-flex align-items-center gap-2">
+                                                                        <input type="checkbox" class="option" value="true"> b) Adotar técnicas de priorização e delegar tarefas a outros envolvidos, de forma organizada.
                                                                     </label>
-                                                                    <label>
-                                                                        <input type="checkbox" name="" id=""> c) Aceitar todas as mudanças sem ajustar o planejamento.
-                                                                    </label>    
-                                                                    <label>
-                                                                        <input type="checkbox" name="" id=""> d) Rejeitar novas mudanças e manter o foco nas tarefas previamente definidas. 
+                                                                    <label class="d-flex align-items-center gap-2">
+                                                                        <input type="checkbox" class="option" value="false"> c) Aceitar todas as mudanças sem ajustar o planejamento.
                                                                     </label>
+                                                                    <label class="d-flex align-items-center gap-2">
+                                                                        <input type="checkbox" class="option" value="false"> d) Rejeitar novas mudanças e manter o foco nas tarefas previamente definidas.
+                                                                    </label>
+                                                                    <button class="btn btn-primary mt-3" id="verificarBtn" onclick="verificarResposta()" style="display: none;">Verificar</button>
                                                                 </div>
                                                                 <br>    
                                                             </span>
