--- a/index.html
+++ b/index.html
@@ -333,20 +333,22 @@
                                                             <br>
                                                             <span style="color: var(--bs-white); font-size: 1.1rem;">
                                                                 <p>1) Qual prática, baseada no manejo de pressão e estresse, seria mais eficiente em um cenário em que se lida com prazos apertados e mudanças frequentes?  </p>
-                                                                <div style="gap: 0.9rem;" class="d-flex flex-column w-100">
+                                                                <div style="gap: 0.9rem;" data-correct="b" data-error-message="b)   Adotar técnicas de priorização e delegar tarefas a outros envolvidos, de forma organizada." class="question d-flex flex-column w-100">
                                                                     <label class="d-flex align-items-center gap-2">
-                                                                        <input type="checkbox" class="option" value="false"> a) Negligenciar as mudanças apresentadas para focar apenas na ideia e planejamento inicial.
+                                                                        <input type="checkbox" class="option" value="a"> a) Negligenciar as mudanças apresentadas para focar apenas na ideia e planejamento inicial.
                                                                     </label>
                                                                     <label class="d-flex align-items-center gap-2">
-                                                                        <input type="checkbox" class="option" value="true"> b) Adotar técnicas de priorização e delegar tarefas a outros envolvidos, de forma organizada.
+                                                                        <input type="checkbox" class="option" value="b"> b) Adotar técnicas de priorização e delegar tarefas a outros envolvidos, de forma organizada.
                                                                     </label>
                                                                     <label class="d-flex align-items-center gap-2">
-                                                                        <input type="checkbox" class="option" value="false"> c) Aceitar todas as mudanças sem ajustar o planejamento.
+                                                                        <input type="checkbox" class="option" value="c"> c) Aceitar todas as mudanças sem ajustar o planejamento.
                                                                     </label>
                                                                     <label class="d-flex align-items-center gap-2">
-                                                                        <input type="checkbox" class="option" value="false"> d) Rejeitar novas mudanças e manter o foco nas tarefas previamente definidas.
+                                                                        <input type="checkbox" class="option" value="d"> d) Rejeitar novas mudanças e manter o foco nas tarefas previamente definidas.
                                                                     </label>
-                                                                    <button class="btn btn-primary mt-3" id="verificarBtn" onclick="verificarResposta()" style="display: none;">Verificar</button>
+                                                                    <div class="d-flex justify-content-center align-items-center">
+                                                                        <button class="btn btn-primary verificarBtn" style="display: none; padding: 0.5rem 1rem !important;">Verificar</button>
+                                                                    </div>    
                                                                 </div>
                                                                 <br>    
                                                             </span>
@@ -359,19 +361,22 @@
                                                             <br>
                                                             <span style="color: var(--bs-white); font-size: 1.1rem;">
                                                                 <p>2) Um estudante recebe críticas sobre o desempenho no desenvolvimento do projeto do curso. Qual habilidade de inteligência emocional, segundo Goleman (1995), é mais relevante para lidar com esse tipo de situação?</p>
-                                                                <div style="gap: 0.9rem;" class="d-flex flex-column w-100">
-                                                                    <label style="gap: 0.5rem;" class="d-flex align-items-center justify-content-center">
-                                                                        <input type="checkbox" name="" id=""> <br> a) Habilidades sociais, que ajudam a argumentar contra as críticas recebidas.
+                                                                <div style="gap: 0.9rem;" data-correct="c" data-error-message="c) Autoconhecimento, que ajuda a reconhecer as próprias reações emocionais diante das críticas. " class="question d-flex flex-column w-100">
+                                                                    <label class="d-flex align-items-center gap-2">
+                                                                        <input type="checkbox" class="option" value="a"> a) Habilidades sociais, que ajudam a argumentar contra as críticas recebidas.
                                                                     </label>
-                                                                    <label>
-                                                                        <input type="checkbox" name="" id=""> b) Empatia, que permite compreender o ponto de vista de quem fez a crítica.
+                                                                    <label class="d-flex align-items-center gap-2">
+                                                                        <input type="checkbox" class="option" value="b"> b) Empatia, que permite compreender o ponto de vista de quem fez a crítica.
                                                                     </label>
-                                                                    <label>
-                                                                        <input type="checkbox" name="" id=""> c) Autoconhecimento, que ajuda a reconhecer as próprias reações emocionais diante das críticas. 
-                                                                    </label>    
-                                                                    <label>
-                                                                        <input type="checkbox" name="" id=""> d) Automotivação, que impulsiona o funcionário a realizar tarefas mesmo sob pressão.
+                                                                    <label class="d-flex align-items-center gap-2">
+                                                                        <input type="checkbox" class="option" value="c"> c) Autoconhecimento, que ajuda a reconhecer as próprias reações emocionais diante das críticas. 
                                                                     </label>
+                                                                    <label class="d-flex align-items-center gap-2">
+                                                                        <input type="checkbox" class="option" value="d"> d) Automotivação, que impulsiona o funcionário a realizar tarefas mesmo sob pressão.
+                                                                    </label>
+                                                                    <div class="d-flex justify-content-center align-items-center">
+                                                                        <button class="btn btn-primary verificarBtn" style="display: none; padding: 0.5rem 1rem !important;">Verificar</button>
+                                                                    </div>    
                                                                 </div>
                                                                 <br>    
                                                             </span>
