--- a/index.html
+++ b/index.html
@@ -390,19 +390,22 @@
                                                                 <p>3) Em um estudo de caso discutido no curso em que está matriculado, foi apresentado o seguinte cenário: imagine que uma equipe de vendas está sob pressão para atingir metas altas em um mercado em constante mudança. 
                                                                     Qual competência destacada na seção do estudo de caso é essencial para que o grupo supere os desafios?
                                                                 </p>
-                                                                <div style="gap: 0.9rem;" class="d-flex flex-column w-100">
+                                                                <div style="gap: 0.9rem;" data-correct="a" data-error-message="a)  Resiliência, que permite recuperar-se emocionalmente e manter o foco nos objetivos. " class="question d-flex flex-column w-100">
                                                                     <label style="gap: 0.5rem;" class="d-flex align-items-center justify-content-center">
-                                                                        <input type="checkbox" name="" id=""> <br> a) Resiliência, que permite recuperar-se emocionalmente e manter o foco nos objetivos. 
+                                                                        <input type="checkbox" class="option" value="a"> <br> a) Resiliência, que permite recuperar-se emocionalmente e manter o foco nos objetivos. 
                                                                     </label>
                                                                     <label>
-                                                                        <input type="checkbox" name="" id=""> b) Flexibilidade, que ajuda a ajustar processos às mudanças de mercado.
+                                                                        <input type="checkbox" class="option" value="b"> b) Flexibilidade, que ajuda a ajustar processos às mudanças de mercado.
                                                                     </label>
                                                                     <label>
-                                                                        <input type="checkbox" name="" id=""> c) Inteligência emocional, que melhora a comunicação interna e reduz conflitos.
+                                                                        <input type="checkbox" class="option" value="c"> c) Inteligência emocional, que melhora a comunicação interna e reduz conflitos.
                                                                     </label>    
                                                                     <label>
-                                                                        <input type="checkbox" name="" id=""> d) Organização, que evita falhas nos processos internos.
+                                                                        <input type="checkbox" class="option" value="d"> d) Organização, que evita falhas nos processos internos.
                                                                     </label>
+                                                                    <div class="d-flex justify-content-center align-items-center">
+                                                                        <button class="btn btn-primary verificarBtn" style="display: none; padding: 0.5rem 1rem !important;">Verificar</button>
+                                                                    </div>  
                                                                 </div>
                                                                 <br>    
                                                             </span>
